--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "presets": [
       "es2015"
     ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13"
   }
 }
