--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "nihilistjill.com",
   "main": "server.js",
   "scripts": {
-    "start": "babel-node server.js"
+    "start": "babel-node server.js",
+    "forever": "forever start -c \"babel-node\" server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-preset-es2015": "^6.3.13",
+    "forever": "^0.15.1"
   }
 }
