--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
-    "forever": "^0.15.1"
+    "forever": "^0.15.1",
+    "jshint": "^2.9.1"
   }
 }
