--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "babel-register": "^6.4.3",
     "forever": "^0.15.1",
     "jshint": "^2.9.1"
+  },
+  "dependencies": {
+    "mime": "^1.3.4"
   }
 }
