--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "nihilistjill.com",
   "main": "server.js",
   "scripts": {
+    "dev:start": "forever --watch --watchDirectory ./ --watchIgnore node_modules index.js",
     "start": "node index.js",
     "forever": "forever --append --uid 'nihilism' start index.js",
     "forever:stop": "forever stop nihilism"
@@ -33,6 +34,7 @@
     "jshint": "^2.9.1"
   },
   "dependencies": {
-    "mime": "^1.3.4"
+    "mime": "^1.3.4",
+    "phantomjs-prebuilt": "^2.1.3"
   }
 }
